/* SPDX-License-Identifier: MIT */

/*
Copyright (c) 2025 Pluraf Embedded AB <code@pluraf.com>

Permission is hereby granted, free of charge, to any person obtaining a copy of
this software and associated documentation files (the “Software”), to deal in
the Software without restriction, including without limitation the rights to
use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies
of the Software, and to permit persons to whom the Software is furnished to
do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
IN THE SOFTWARE.
*/


syntax = "proto3";

package channel_modbus_api;

service ModbusChannel {
  // Read
  rpc ReadDiscreteInputs (ReadRequest) returns (ReadBitsResponse) {}
  rpc ReadCoils (ReadRequest) returns (ReadBitsResponse) {}
  rpc ReadInputRegisters (ReadRequest) returns (ReadRegistersResponse) {}
  rpc ReadHoldingRegisters (ReadRequest) returns (ReadRegistersResponse) {}
  // Write
  rpc WriteCoils (WriteBitsRequest) returns (WriteResponse) {}
  rpc WriteHoldingRegisters (WriteRegistersRequest) returns (WriteResponse) {}
}

message ReadRequest {
  uint32 address = 1;
  uint32 quantity = 2;
}

message WriteBitsRequest {
  uint32 address = 1;
  uint32 quantity = 2;
  repeated bool bits = 3;
}

message WriteRegistersRequest {
  uint32 address = 1;
  uint32 quantity = 2;
  repeated uint32 registers = 3;
}

message ReadBitsResponse {
  int32 status = 1;
  uint32 error = 2;
  repeated bool bits = 3;
}

message ReadRegistersResponse {
  int32 status = 1;
  uint32 error = 2;
  repeated uint32 registers = 3;
}

message WriteResponse {
  int32 status = 1;
  uint32 error = 2;
}
